--- a/kubernetes/java-app.yaml
+++ b/kubernetes/java-app.yaml
@@ -28,10 +28,16 @@ spec:
         imagePullPolicy: Always
         readinessProbe:
           httpGet:
-            path: /actuator/health
+            path: /actuator/health/readiness
             port: 8080
-          initialDelaySeconds: 30
+          initialDelaySeconds: 45
           periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /actuator/health/liveness
+            port: 8080
+          initialDelaySeconds: 60
+          periodSeconds: 15
 ---
 apiVersion: v1
 kind: Service
