--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=DevOps_project
+
+# Enable Kubernetes-specific health groups
+management.endpoint.health.probes.enabled=true
+
+# Ensure health endpoints are exposed over HTTP
+management.endpoints.web.exposure.include=health,info
